--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "fabiorecife <fabiorecife@gmail.com>"
   ],
-  "description": "explorer silex",
+  "description": "Format, validate and generate brazilian CPF/CNPJ numbers",
   "main": "app.js",
   "moduleType": [
     "globals",
@@ -27,7 +27,8 @@
     "angular": "1.3.15",
     "bootstrap": "~3.3.4",
     "jquery": "~1.11.3",
-    "underscore": "~1.8.2"
+    "underscore": "~1.8.2",
+    "file-saver.js": "1.20150304.1"
   },
   "devDependencies": {
     "qunit": "~1.18.0"
